--- a/Artist Cartridges/Toto/Readme
+++ b/Artist Cartridges/Toto/Readme
@@ -1,1 +1,69 @@
-programmed by David Paich & Steve Porcaro
+Programmed by David Paich & Steve Porcaro
+Released by AViC Soft as KV-05 cartridges
+
+
+BANK A = 
+01. TT-STRING1 
+02. TT-STRING2
+03. TT-STRING3
+04. TT-STRING4
+05. TT-CELLOS
+06. BASS SAW
+07. FAHRENHEIT
+08. FRENCHDHRN
+09. CHLD S BRS
+10. HYDRA HRNS
+11. RO TRMBONE
+12. MARIMBA1
+13. MARIMBA2
+14. TT-BELLS1
+15. TT-BELLS2
+16. AFRICA 	17. STEVE SAX
+18. TT-BRASS1
+19. TT-BRASS2
+20. TT-WINDS1
+21. TT-WINDS2
+22. TT-WINDS3
+23. TT-WINDS4
+24. MAKIT FLT.
+25. GEORGY FLT
+26. TT-TRUMPET   
+27. STEVE S RD
+28. ROADSANNA
+29. AFRICASOLO
+30. YOUR SKULL
+31. XYLOSPEIL?
+32. MR.BELL 	
+
+BANK B = 
+01. 99 VOICES
+02. TOTO HMND1
+03. HMND EGGS
+04. STEVEHMND
+05. PIPE BELL
+06. PAICHPIPE
+07. LTMYFIRE
+08. 60-S ORGAN   
+09. TT-E.P1
+10. TT-E.P2
+11. RSNAWRLTZR
+12. TOTO WURLY
+13. STEVS E.P
+14. REDRHODES
+15. AC GUITAR
+16. ST GUITAR 	17. CLAVMET    
+18. DETHCLAV
+19. CLAVCOMP
+20. MUTED CLAV
+21. CLAV.TOOTS
+22. DAV S BASS
+23. OSCAR BASS
+24. LEA BASS
+25. POP BASS
+26. WAIT BASS
+27. CHNJAHARP
+28. SEPTIMBRE
+29. ISOLATION
+30. DAVE KOTO
+31. TOY PIANO
+32. YA GOT ME 
