--- a/Artist Cartridges/Toto/Readme
+++ b/Artist Cartridges/Toto/Readme
@@ -18,7 +18,8 @@ BANK A =
 13. MARIMBA2
 14. TT-BELLS1
 15. TT-BELLS2
-16. AFRICA 	17. STEVE SAX
+16. AFRICA
+17. STEVE SAX
 18. TT-BRASS1
 19. TT-BRASS2
 20. TT-WINDS1
@@ -51,7 +52,8 @@ BANK B =
 13. STEVS E.P
 14. REDRHODES
 15. AC GUITAR
-16. ST GUITAR 	17. CLAVMET    
+16. ST GUITAR 
+17. CLAVMET    
 18. DETHCLAV
 19. CLAVCOMP
 20. MUTED CLAV
